--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
-title: 💻✒️📄🌟
-description: Swaraj Singh's CV
+title: Swaraj Singh's CV
+description: Open to work & new opportunities
