Modify: trying something new

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
 title: Swaraj Singh's CV
-description: Open to work & new opportunities
+description: Motivated Java Full Stack Developer offers 3.5+ years of experience leading cross-functional teams and completing projects on-time. Seamlessly manages workloads and meets challenging deadlines and quality benchmarks. Strong understanding of common frontend and backend technologies, languages and frameworks.
