Modify: Custom CSS

--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,4 @@ plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 title: Swaraj Singh's CV
 description: Motivated Java Full Stack Developer offers 3.5+ years of experience leading cross-functional teams and completing projects on-time. Seamlessly manages workloads and meets challenging deadlines and quality benchmarks. Strong understanding of common frontend and backend technologies, languages and frameworks.
-show_downloads: true
+show_downloads: false
